[gd_scene load_steps=25 format=2]

[ext_resource path="res://hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://hurtbox.gd" type="Script" id=3]
[ext_resource path="res://Igelkott.gd" type="Script" id=4]
[ext_resource path="res://gfx/igelkott.png" type="Texture" id=5]
[ext_resource path="res://gfx/mosquito_blood.png" type="Texture" id=6]
[ext_resource path="res://audio/enemy_hit3.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/nope.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.52513
height = 2.82851

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 5.08368
height = 2.78072

[sub_resource type="CapsuleShape2D" id=12]
radius = 5.23943
height = 5.85023

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), null ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="Igelkott" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
frame = 4
playing = true

[node name="hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( -0.0927118, 3.76729 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0.161335, 3.8767 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="AnimatedBlood" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -1, 3 )
frames = SubResource( 16 )
speed_scale = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AudioNope" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="TimerAttack" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]

[editable path="hitbox"]

[editable path="hurtbox"]
